Add basic directory and files

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CST Dashboard</title>
     <!-- CSS -->
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./src/style.css" />
 
     <!-- Bootstrap -->
     <link
@@ -21,7 +21,9 @@
     <main id="mainBody">
       <section id="leftSection" class="card sections">
         <div id="leftSectionHeader" class="card-header sectionHeaders">
-          <h4 class="sectionHeaderH4s">Course List</h4>
+          <h4 class="sectionHeaderH4s">
+            <a class="nav-link" href="./src/pages/course.html">Course List</a>
+          </h4>
           <button id="addCourseBtn" class="btn">Add Course</button>
         </div>
         <div id="leftSectionBody" class="sectionBodies">
@@ -38,7 +40,9 @@
       <section id="rightSection">
         <section id="topSection" class="card sections">
           <div id="topSectionHeader" class="card-header sectionHeaders">
-            <h4 class="sectionHeaderH4s">Todo List</h4>
+            <h4 class="sectionHeaderH4s">
+              <a class="nav-link" href="./src/pages/todo.html">Todo List</a>
+            </h4>
             <button id="addTodoBtn" class="btn">Add Todo</button>
           </div>
           <div id="topSectionBody" class="sectionBodies">
@@ -64,6 +68,6 @@
       </section>
     </main>
     <!-- javaScript -->
-    <script src="./script.js"></script>
+    <script src="./src/script.js"></script>
   </body>
 </html>
