Update db connection

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CST Dashboard</title>
     <!-- CSS -->
-    <link rel="stylesheet" href="./src/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
 
     <!-- Bootstrap -->
     <link
@@ -22,7 +22,7 @@
       <section id="leftSection" class="card sections">
         <div id="leftSectionHeader" class="card-header sectionHeaders">
           <h4 class="sectionHeaderH4s">
-            <a class="nav-link" href="./src/pages/course.html">Course List</a>
+            <a class="nav-link" href="./pages/course.html">Course List</a>
           </h4>
           <button id="addCourseBtn" class="btn">Add Course</button>
         </div>
@@ -41,7 +41,7 @@
         <section id="topSection" class="card sections">
           <div id="topSectionHeader" class="card-header sectionHeaders">
             <h4 class="sectionHeaderH4s">
-              <a class="nav-link" href="./src/pages/todo.html">Todo List</a>
+              <a class="nav-link" href="./pages/todo.html">Todo List</a>
             </h4>
             <button id="addTodoBtn" class="btn">Add Todo</button>
           </div>
@@ -68,6 +68,6 @@
       </section>
     </main>
     <!-- javaScript -->
-    <script src="./src/script.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
