--- a/public/pages/course.html
+++ b/public/pages/course.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Courses</title>
     <!-- CSS -->
-    <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
 
     <!-- Bootstrap -->
     <link
@@ -20,6 +20,6 @@
     </header>
     <main id="mainBody"></main>
     <!-- javaScript -->
-    <script src="../script.js"></script>
+    <script src="../js/script.js"></script>
   </body>
 </html>
