Update course list to fetch from db

--- a/public/index.html
+++ b/public/index.html
@@ -27,14 +27,7 @@
           <button id="addCourseBtn" class="btn">Add Course</button>
         </div>
         <div id="leftSectionBody" class="sectionBodies">
-          <ul id="courseList" class="list-group list-group-flush">
-            <li class="list-group-item">
-              <h6><span>COMP 2121</span>Discrete Mathematics</h6>
-            </li>
-            <li class="list-group-item">
-              <h6><span>COMP 2522</span>OOP 1</h6>
-            </li>
-          </ul>
+          <ul id="courseList" class="list-group list-group-flush"></ul>
         </div>
       </section>
       <section id="rightSection">
