Update CSS and add a modal skeleton

--- a/public/pages/course.html
+++ b/public/pages/course.html
@@ -19,7 +19,7 @@
       <h2>Courses</h2>
     </header>
     <main id="mainBody"></main>
-    <!-- javaScript -->
+    <!-- JavaScript -->
     <script src="../js/script.js"></script>
   </body>
 </html>
