--- a/public/pages/todo.html
+++ b/public/pages/todo.html
@@ -19,7 +19,7 @@
       <h2>Todo</h2>
     </header>
     <main id="mainBody"></main>
-    <!-- javaScript -->
+    <!-- JavaScript -->
     <script src="../js/script.js"></script>
   </body>
 </html>
