--- a/public/pages/course.html
+++ b/public/pages/course.html
@@ -6,7 +6,8 @@
     <title>Courses</title>
     <!-- CSS -->
     <link rel="stylesheet" href="../css/style.css" />
-
+    <!-- jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <!-- Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
