--- a/public/index.html
+++ b/public/index.html
@@ -75,7 +75,10 @@
             </button>
           </div>
           <div id="bottomSectionBody" class="sectionBodies">
-            <table id="weeklyCalendar" class="table table-bordered"></table>
+            <table
+              id="weeklyCalendar"
+              class="table table-bordered table-sm"
+            ></table>
           </div>
         </section>
       </section>
