Update db table name

--- a/public/index.html
+++ b/public/index.html
@@ -157,7 +157,11 @@
             </div>
             <!-- Course Modal Footer -->
             <div class="modal-footer">
-              <input id="courseModalResetBtn" type="reset" class="btn" />
+              <input
+                id="courseModalResetBtn"
+                type="reset"
+                class="btn btn-outline-dark"
+              />
               <input
                 id="courseModalSubmitBtn"
                 type="submit"
