Update db interaction for todo

--- a/public/index.html
+++ b/public/index.html
@@ -223,7 +223,7 @@
                   <select name="priority" id="priority" class="form-select">
                     <option value="none">No Priority</option>
                     <option value="high">High</option>
-                    <option value="middle">medium</option>
+                    <option value="medium">medium</option>
                     <option value="low">low</option>
                   </select>
                 </div>
@@ -281,8 +281,16 @@
             </div>
             <!-- Todo Modal Footer -->
             <div class="modal-footer">
-              <input id="" type="reset" class="btn btn-outline-dark" />
-              <input id="" type="submit" class="btn btn-secondary" />
+              <input
+                id="todoModalResetBtn"
+                type="reset"
+                class="btn btn-outline-dark"
+              />
+              <input
+                id="todoModalSubmitBtn"
+                type="submit"
+                class="btn btn-secondary"
+              />
             </div>
           </form>
         </div>
