Update the todo list to display from db

--- a/public/index.html
+++ b/public/index.html
@@ -60,14 +60,7 @@
             </button>
           </div>
           <div id="topSectionBody" class="sectionBodies">
-            <ul id="courseList" class="list-group list-group-flush">
-              <li class="list-group-item">
-                <input type="checkbox" /> <span>Something to do</span>
-              </li>
-              <li class="list-group-item">
-                <input type="checkbox" /> <span>Something to do</span>
-              </li>
-            </ul>
+            <ul id="todoList" class="list-group list-group-flush"></ul>
           </div>
         </section>
 
@@ -223,8 +216,8 @@
                   <select name="priority" id="priority" class="form-select">
                     <option value="none">No Priority</option>
                     <option value="high">High</option>
-                    <option value="medium">medium</option>
-                    <option value="low">low</option>
+                    <option value="medium">Medium</option>
+                    <option value="low">Low</option>
                   </select>
                 </div>
                 <div class="col">
@@ -240,7 +233,7 @@
                     <option value="daily">Daily</option>
                     <option value="Weekly">Weekly</option>
                     <option value="biweekly">Biweekly</option>
-                    <option value="monthly">monthly</option>
+                    <option value="monthly">Monthly</option>
                   </select>
                 </div>
               </div>
